--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -36,22 +36,24 @@
   ],
   "dependencies": {
     "@loopback/boot": "5.0.8",
+    "@loopback/build": "^9.0.9",
     "@loopback/core": "4.0.8",
     "@loopback/repository": "5.1.3",
     "@loopback/rest": "12.0.8",
     "@loopback/rest-explorer": "5.0.8",
     "@loopback/service-proxy": "5.0.8",
+    "@loopback/testlab": "^5.0.9",
+    "@stolaar/api": "file:",
+    "g": "^2.0.1",
     "loopback-connector-postgresql": "6.0.2",
     "postgres": "3.3.3",
     "tslib": "2.0.0"
   },
   "devDependencies": {
-    "@loopback/build": "9.0.8",
     "@loopback/eslint-config": "13.0.8",
-    "@loopback/testlab": "5.0.8",
     "@stolaar/eslint": "*",
     "@types/node": "14.18.36",
-    "eslint": "8.35.0",
+    "eslint": "^8.35.0",
     "source-map-support": "0.5.21",
     "tsc-watch": "6.0.0",
     "typescript": "4.9.4"
