--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,9 +22,11 @@
     "@mui/icons-material": "5.11.11",
     "@mui/material": "5.11.11",
     "@stolaar/utils": "*",
+    "@stolaar/web": "file:",
     "@tanstack/react-query": "4.24.10",
     "axios": "1.3.4",
     "next": "13.2.1",
+    "package.json": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.2"
