--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,6 @@ services:
     build:
       context: ./apps/api
       dockerfile: Dockerfile
+    container_name: api
     depends_on:
       - db
