--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,7 @@ services:
       context: ./apps/api
       dockerfile: Dockerfile
     container_name: api
+    ports:
+      - 8080:8080
     depends_on:
       - db
