--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       POSTGRES_USER: "postgres"
       POSTGRES_DB: "loopback"
   api:
+    image: api
     build:
       context: ./apps/api
       dockerfile: Dockerfile
